--- a/deploy/Dockerfile.deploy
+++ b/deploy/Dockerfile.deploy
@@ -14,12 +14,9 @@
 # 9246  Mainnet Bitcoin peer-to-peer port
 # 9245  Mainet RPC port
 
-ARG ARCH=amd64
+FROM golang AS build-container
 
-FROM golang:1.16-alpine3.14 AS build-container
-
-ARG ARCH
-ENV GO111MODULE=on
+# ENV GO111MODULE=on
 
 ADD . /app
 WORKDIR /app
@@ -27,14 +24,15 @@ RUN set -ex \
   && if [ "${ARCH}" = "amd64" ]; then export GOARCH=amd64; fi \
   && if [ "${ARCH}" = "arm64v8" ]; then export GOARCH=arm64; fi \
   && echo "Compiling for $GOARCH" \
-  && go install -v . ./cmd/...
+  && CGO_ENABLED=0 go build .
 
-FROM $ARCH/alpine:3.14
+FROM debian:11-slim
 
-COPY --from=build-container /go/bin /bin
+COPY --from=build-container /app/lbcd /
+COPY --from=build-container /app/deploy/run.sh /
 
 VOLUME ["/root/.lbcd"]
 
 EXPOSE 9245 9246
 
-ENTRYPOINT ["lbcd"]
+ENTRYPOINT ["/run.sh"]
