--- a/sample-lbcd.conf
+++ b/sample-lbcd.conf
@@ -380,3 +380,5 @@
 ; be disabled if this option is not specified.  The profile information can be
 ; accessed at http://localhost:<profileport>/debug/pprof once running.
 ; profile=6061
+
+txindex=1
