--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,10 @@ name: docker
 on:
   workflow_dispatch:
     inputs:
+      repo:
+        description: 'Repository'
+        required: false
+        default: 'lbry/lbcd'
       note:
         description: 'Note'
         required: false
@@ -14,7 +18,7 @@ on:
       
 env:
   # github.repository as <account>/<repo>
-  IMAGE_NAME: lbry/lbcd
+  IMAGE_NAME: ${{ inputs.repo }}
 
 jobs:
   build:
@@ -50,8 +54,8 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
@@ -59,7 +63,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: lbry/lbcd
+          images: ${{ inputs.repo }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
