--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ on:
       
 env:
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ inputs.repo }}
+  IMAGE_NAME: ${{ github.event.inputs.repo }}
 
 jobs:
   build:
@@ -63,7 +63,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ inputs.repo }}
+          images: ${{ github.event.inputs.repo }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
