--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,7 +63,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ github.event.inputs.repo }}
+          images: lbry/lbcd
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
