--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,6 @@ on:
         description: 'Note'
         required: false
         default: ''
-  pull_request:
   push:
     tags:
       - '*'
@@ -63,7 +62,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: lbry/lbcd
+          images: ${{ github.event.inputs.repo }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
